# simple_kv

./: .gitignore  Cargo.toml  README.md
simple_kv_cli/: Cargo.toml  README.md
simple_kv_cli/src/: client.rs  commands.rs  error.rs  main.rs
src/: backup.rs  config.rs  handle_client.rs  kv_store.rs  main.rs  transaction_log.rs
