[package]
name = "simple_kv_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
prettytable-rs = "0.10"
rustyline = "13.0"
